# assignment_berkeley

./: .gitignore  README.md  alembic.ini  berkeley.db  pyproject.toml
alembic/: env.py
alembic/versions/: 90f40b9ea4e5_create_initial_tables.py
assignment_berkeley/: __init__.py  config.py  main.py
assignment_berkeley/db/: db_interface.py  engine.py  models.py
assignment_berkeley/helpers/: db_helpers.py  product_helpers.py
assignment_berkeley/operations/: customers.py  interface.py  orders.py  products.py  webhooks.py
assignment_berkeley/routers/: customers.py  orders.py  products.py  webhooks.py
tests/: test_api.py
